[workspace]
members = [ "builtin-errors",
    "decode-error",
    "hash",
    "instruction",
    "layout-utils",
    "program-error",
    "program-stubs",
    "pubkey",
    "sanitize",
]
resolver = "2"

[workspace.dependencies]
arbitrary = "1.3.2"
assert_matches = "1.5.0"
base64 = "0.21.7"
bincode = "1.3.3"
blake3 = "1.5.0"
borsh = "1.2.1"
bs58 = "0.4.0"
bytemuck = "1.14.3"
curve25519-dalek = "3.2.1"
itertools = "0.10.5"
lazy_static = "1.4.0"
num-derive = "0.4.0"
num-traits = "0.2.0"
rand = "0.8.5"
serde = "1.0.197"
serde_derive = "1.0.103"
serde_json = "1.0.114"
sha2 = "0.10.8"
sha3 = "0.10.4"
solana-frozen-abi = "1.18.0"
solana-frozen-abi-macro = "1.18.0"
solana-sdk-macro = "1.18.0"
static_assertions = "1.1.0"
thiserror = "1.0.57"
wasm-bindgen = "0.2.0"
