[package]
name = "solana-hash"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
sha3 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
solana-frozen-abi = { workspace = true }
solana-frozen-abi-macro = { workspace = true }
solana-sanitize = { path = "../sanitize" }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true }