[package]
name = "solana-layout-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
solana-frozen-abi = { workspace = true }
solana-frozen-abi-macro = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }